--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
    <div class="row" id="viewblock">
        <div class="imgDiv"> 
-           <img class="img-responsive" src="images/pizza.png">
+           <img class="img-responsive" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.NYeUwLoGTX5SRWY4o40d4wHaFj%26pid%3DApi&f=1">
        </div>
        <div class="menuDiv">
            <button id="menuList" onclick="getMenu()">Mostrar Menu</button>
@@ -31,7 +31,7 @@
    <div class="newRow" id="addTopings">
        <div class="block1">
            <input id="addItem" placeholder="Digite aqui para adicionar ingredientes"> 
-        <button id="buttonsim"></button>
+        <button id="buttonsim"> Add </button>
            <button id="addToppings" onclick="addItem()">Mostrar Pizza</button>
        </div>
      
@@ -43,7 +43,7 @@
    </div>
 
    <div>
-       <img class="img-responsive" src="images/topping.png">
+       <img class="img-responsive" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpngimg.com%2Fuploads%2Fpizza%2Fpizza_PNG7151.png&f=1&nofb=1&ipt=cae903f05b46c99106677f3a490893e5cb50ef60194afa831a275a2a011e3902&ipo=images">
    </div>
 
 
